[gd_scene load_steps=7 format=2]

[ext_resource path="res://Boring_Nodes/Main_Menu/Assets/Aseprite Background.png" type="Texture" id=1]
[ext_resource path="res://Boring_Nodes/Main_Menu/Buttons/Play_Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Boring_Nodes/Main_Menu/Main_Menu.gd" type="Script" id=4]
[ext_resource path="res://Project_Assets/FONT.ttf" type="DynamicFontData" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -53, 282, 0, 0, 0, 0, 987, 283, 0, 0, 0, 0, 52, 589, 0, 0, 0, 0, 510, 10, 0, 0, 0, 0, 970, 586, 0, 0, 0, 0, -55, 283 )
}

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="Main_Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="Path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Spawn_Timer" type="Timer" parent="Path"]

[node name="Title" type="Label" parent="."]
margin_left = 275.0
margin_right = 2195.0
margin_bottom = 774.0
rect_scale = Vector2( 0.25, 0.25 )
custom_colors/font_color = Color( 0.443137, 0.0392157, 0.0156863, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = 14
custom_fonts/font = SubResource( 2 )
text = "DONT   LET

THEM HAUNT"

[node name="Play_Button" parent="." instance=ExtResource( 2 )]
margin_left = 414.0
margin_top = 513.0
margin_right = 1194.0
margin_bottom = 775.0
rect_scale = Vector2( 0.25, 0.25 )
custom_colors/font_color = Color( 0.219608, 0.164706, 0.164706, 1 )
expand_icon = true

[connection signal="timeout" from="Path/Spawn_Timer" to="." method="_on_Spawn_Timer_timeout"]
[connection signal="pressed" from="Play_Button" to="." method="_on_Play_Button_pressed"]
